--- a/src/main/resources/templates/license-admin.vm
+++ b/src/main/resources/templates/license-admin.vm
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
     <head>
-        <title>$i18n.getText("plugin.license.storage.admin.title", "Jira Twitter Plugin")</title>
+        <title>$i18n.getText("plugin.license.storage.admin.title", "Twitter Plugin for JIRA")</title>
         <meta name='decorator' content='atl.admin'/>
     </head>
     <body>
-        <h1>$i18n.getText("plugin.license.storage.admin.title", "Jira Twitter Plugin")</h1>
+        <h1>$i18n.getText("plugin.license.storage.admin.title", "Twitter Plugin for JIRA")</h1>
             ## Because these message may embed html tags that we don't want to be overescaped
             #set($successMessageWithHtml = $successMessage)
             #set($errorMessageWithHtml = $errorMessage)
