--- a/src/main/resources/templates/configure.vm
+++ b/src/main/resources/templates/configure.vm
@@ -2,62 +2,42 @@
   <head>
     <title>$i18n.getText("jtp.configuration.menu.header")</title>
     <meta name="decorator" content="atl.admin" />
-    <style type="text/css">
-    	body{
-			font-family:Arial, Helvetica, sans-serif; 
-			font-size:13px;
-			}
-			.info, .success, .warning, .error, .validation {
-			border: 1px solid;
-			margin: 10px 0px;
-			padding:15px 10px 15px 50px;
-			background-repeat: no-repeat;
-			background-position: 10px center;
-			}
-			.info {
-			color: #00529B;
-			background-color: #BDE5F8;
-			background-image: url('info.png');
-			}
-			.success {
-			color: #4F8A10;
-			background-color: #DFF2BF;
-			background-image:url('success.png');
-			}
-			.warning {
-			color: #9F6000;
-			background-color: #FEEFB3;
-			background-image: url('$baseUrl/download/resources/plugin.jtp/images/jtp-icon.png');
-			}
-			.error {
-			color: #D8000C;
-			background-color: #FFBABA;
-			background-image: url('error.png');
-		}
-    </style>
-    $webResourceManager.requireResource("com.atlassian.auiplugin:ajs")
+    <script src="$baseUrl/download/resources/plugin.jtp/jquery.js"></script>
+  	<script src="$baseUrl/download/resources/plugin.jtp/jquery-ui.js"></script>
+  	<link rel="stylesheet" href="$baseUrl/download/resources/plugin.jtp/jquery-ui.css" />
+  	<link rel="stylesheet" href="$baseUrl/download/resources/plugin.jtp/jep-style.css" />
+    <script type="text/javascript">
+		$(document).ready(function(){
+			$('.close').click(function() {
+				closeid = $(this).attr('id');
+				$('.'+closeid).hide('slow', 0);
+			});
+		});
+	</script>
   </head>
   <body>
   	<img src='$baseUrl/download/resources/plugin.jtp/images/jtp-logo.png'/>
   	<span style="display:inline-block; vertical-align:middle"><h3> $i18n.getText("jtp.configuration.header")</h3></span>
-
-	<!-- <div class="info, warning, success, error, validation"> yapılabilir -->
-	
 	#if ($errorMessages && $errorMessages.size() > 0 || !$licenseValid || $exceptionMessages && !$exceptionMessages.isEmpty())
- 		<div class="aui-message error"><span class="aui-icon icon-error"></span>
- 			<ul>
- 				#if (!$licenseValid)
- 					<li><font color="red">$i18n.getText("jtp.configuration.license.invalid") : $licenseMessage</font></li>
- 				#end
- 				
-			  	#foreach ($errorMessage in $errorMessages)
-					<li><font color="red">$errorMessage</font></li>
-				#end
-				
-				#foreach ($exc in $exceptionMessages)
-					<li><font color="red">$exc</font></li>
-				#end
-			</ul>
+		<div class="dialog warning">
+			<span class="close" id="success"></span>
+			<span class="icon"></span>
+			<h4 class="jep-h4">Success</h4>
+			<p>
+	 			<ul>
+	 				#if (!$licenseValid)
+	 					<li><font color="white">$i18n.getText("jtp.configuration.license.invalid") : $licenseMessage</font></li>
+	 				#end
+	 				
+				  	#foreach ($errorMessage in $errorMessages)
+						<li><font color="white">$errorMessage</font></li>
+					#end
+					
+					#foreach ($exc in $exceptionMessages)
+						<li><font color="white">$exc</font></li>
+					#end
+				</ul>
+			</p>
  		</div>
 	#end
 		        		
