--- a/src/main/resources/templates/configure.vm
+++ b/src/main/resources/templates/configure.vm
@@ -6,16 +6,16 @@
   	<script src="$baseUrl/download/resources/plugin.jtp/jquery-ui.js"></script>
   	<link rel="stylesheet" href="$baseUrl/download/resources/plugin.jtp/jquery-ui.css" />
   	<link rel="stylesheet" href="$baseUrl/download/resources/plugin.jtp/jep-style.css" />
-    <script type="text/javascript">
+  </head>
+  <body>
+  	<script type="text/javascript">
 		$(document).ready(function(){
-			$('.close').click(function() {
+			$('.dialog').click(function() {
 				closeid = $(this).attr('id');
 				$('.'+closeid).hide('slow', 0);
 			});
 		});
 	</script>
-  </head>
-  <body>
   	<img src='$baseUrl/download/resources/plugin.jtp/images/jtp-logo.png'/>
   	<span style="display:inline-block; vertical-align:middle"><h3> $i18n.getText("jtp.configuration.header")</h3></span>
 	#if ($errorMessages && $errorMessages.size() > 0 || !$licenseValid || $exceptionMessages && !$exceptionMessages.isEmpty())
